# gemini-balance

./: .coveragerc  .dockerignore  .env.example  .env.test.bak  .gitignore  .python-version  AGENTS.md  CRITICAL_ISSUES.md  Dockerfile  FIX_PLAN.md  IMPLEMENTATION_PLAN.md  LICENSE  MIGRATION_AUDIT.md  MIGRATION_INDEX.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.cursor/: worktrees.json
.cursor/rules/: tests-key-manager.mdc
.github/workflows/: docker-publish.yml  release.yml
alembic/: env.py
alembic/versions/: 381c9234c7c6_add_usage_stats_table.py  (+2 more)
app/: dependencies.py  main-dev.py  main.py
data/: :memory:  defaults_rate_limits.json  test.db
tests/: .env.test  conftest.py  test_auth.py  test_config.py  test_config_ui.py  test_database_services.py  test_frontend.py  test_handler_message_converter.py  test_handler_response_handler.py  test_key_redaction.py  test_keys.py  test_logger.py  test_logs.py  test_middleware_request_logging_middleware.py  test_middleware_smart_routing_middleware.py  test_router_config_routes.py  test_router_error_log_routes.py  test_router_files_routes.py  test_router_gemini_routes.py  test_router_key_routes.py  test_router_openai_compatible_routes.py  test_router_openai_routes.py  test_service_chat_gemini_chat_service.py  test_service_chat_openai_chat_service.py  test_service_chat_vertex_express_chat_service.py  test_service_files_file_upload_handler.py  test_service_files_files_service.py  test_service_key_key_manager.py  test_utils_helpers.py  test_utils_uploader.py
(+166 files in other folders)
